[package]
name = "ort-test-ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ort = { version = "2.0.0-alpha.4", features = ["ndarray"] }
pacosako-rust = { path = "/home/rolf/dev/pacosako/lib" }
