[package]
name = "ort-test-ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ort = { version = "2.0.0-alpha.4", default-features = false, features = [
    'download-binaries',
] }
pacosako-rust = { path = "/home/rolf/dev/pacosako/lib" }
